k8s/home/cluster-apps/namespace/default/librespeed/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: librespeed
  name: librespeed
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
      - image: ghcr.io/linuxserver/librespeed
        name: librespeed
        volumeMounts:
          - mountPath: /config
            name: config
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 20
      volumes:
        - name: config
          persistentVolumeClaim:
              claimName: librespeed-config
