k8s/home/cluster-apps/namespace/default/librespeed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: le-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: librespeed
  labels:
    app: librespeed
spec:
  rules:
    - host: speedtest.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librespeed
                port:
                  number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
      - speedtest.waltr.tech
      secretName: speedtestwaltrtech-cert # < cert-manager will store the created certificate in this secret
